2004-05-17  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* rfc2047.el (rfc2047-field-value): Strip props.

	* mail-parse.el (mail-header-make-address): New alias.

	* ietf-drums.el (ietf-drums-make-address): New function.

	* imap.el: Add compiler directives.

	* gnus-score.el (gnus-score-edit-done): run-hook->run-hooks. 

	* gnus-art.el (article-decode-idna-rhs): Don't use
	message-idna-inside-rhs-p. 

2004-05-16  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* message.el (message-idna-inside-rhs-p): Removed.
	(message-idna-to-ascii-rhs-1): Use proper address parsing.

	* gnus-art.el (gnus-emphasis-alist): Removed strikethru; too many
	false positives.

2004-05-16  Kim Minh Kaplan  <kmkaplan-AwwS6Bc0PDVoiYX5Tdu9fQ@public.gmane.org>

	* imap.el (imap-sasl-make-mechanisms): Use sasl. 

2004-05-16  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* nneething.el (nneething-file-name): Don't create spurions
	files. 

	* gnus-msg.el (gnus-inews-do-gcc): Ignore read-only groups. 
	(gnus-inews-do-gcc): Remove sleep.

	* gnus-art.el (gnus-mime-delete-part): Error message when no MIME
	part under point.

	* gnus-agent.el (gnus-agent-synchronize-flags): Default to nil. 
	(gnus-agent-regenerate-group): Using nil messages aren't valid. 

2004-05-15  Teodor Zlatanov  <tzz@lifelogs.com>

	* spam.el (spam-summary-prepare-exit): oops, forgot (length)

2004-05-14  Teodor Zlatanov  <tzz@lifelogs.com>

	* gnus-dup.el (gnus-dup-unsuppress-article): don't assume the mail
	header is not nil (tiny change).  From Nelson Ferreira
	<nelson.ferreira@verizon.net>.

	* spam.el (spam-summary-prepare-exit): only produce "marking spam
	as expired without moving it" message when there are spam
	messages left

2004-05-14  Kai Grossjohann  <kgrossjo@eu.uu.net>

	* nntp.el (nntp-request-set-mark, nntp-request-update-info): Call
	nntp-possibly-create-directory, not nntp-possibly-change-group.
	(nntp-marks-changed-p): New arg SERVER.
	(nntp-request-update-info): Adjust caller.
